Display switched from disabled to readonly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <section class="grid grid-template-areas">
-            <input id="input-value" class="display" disabled>
+            <input id="input-value" class="display" readonly>
 
             <button onclick="clear()" class="item clear button-operations">AC</button>
             <button onclick="invertValue()" class="item plus-minus button-operations">+/-</button>
@@ -38,6 +38,6 @@
 
         </section>
     </div>
+    <script src="./script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
